fix spacing

--- a/app/coming-soon/styles.module.scss
+++ b/app/coming-soon/styles.module.scss
@@ -1,10 +1,17 @@
-@media (orientation: landscape) {
-  .coming-soon {
+.page_wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: clamp(25px, 3vh, 50px);
+  position: relative;
+  z-index: 9;
+  @media (orientation: landscape) {
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
   }
+}
+
+.mainContent {
+  margin-top: clamp(25px, 3vh, 50px);
 }
 
 .brand {
@@ -22,7 +29,6 @@
   font-weight: 500;
   margin-bottom: 8px;
   text-transform: uppercase;
-  margin-top: clamp(56px, 6vw, 107px);
 }
 
 .desc {
@@ -32,5 +38,6 @@
 }
 
 .mainImage {
-  margin: 46px auto clamp(46px, 4vw, 70px);
+  margin: clamp(25px, 3.5vh, 46px) auto 0;
+  max-height: clamp(225px, 30vh, 700px);
 }
