--- a/app/components/styles/parallax-bg.module.scss
+++ b/app/components/styles/parallax-bg.module.scss
@@ -12,8 +12,11 @@
 
   img {
     position: absolute;
-    transition: transform 0.3s ease-in-out;
+    // transition: transform 0.3s ease-in-out;
     // animation: move 10s linear alternate-reverse infinite;
+    animation: jump 8s infinite linear;
+    // animation: animationFramesTwo 13s infinite linear;
+    // animation: animationFramesOne 20s alternate infinite linear;
     /* @media (prefers-color-scheme: dark) {
       opacity: 0.5;
     } */
@@ -22,31 +25,37 @@
     &:nth-child(1) {
       top: 5.44%;
       left: 29.84%;
+      animation: animationFramesOne 25s infinite linear;
     }
     
     &:nth-child(2) {
       top: 24.40%;
       left: 29.69%;
+      animation: animationFramesTwo 20s infinite linear;
     }
     
     &:nth-child(3) {
       top: 30.99%;
       left: 16.15%;
+      animation: animationFramesThree 30s infinite alternate linear;
     }
     
     &:nth-child(4) {
       bottom: 43.87%;
       left: 7.60%;
+      animation: animationFramesFour 50s infinite alternate linear;
     }
     
     &:nth-child(5) {
       bottom: 13.83%;
-      left: 20.63%;
+      left: 15.63%;
+      animation: animationFramesFive 20s infinite alternate linear;
     }
     
     &:nth-child(6) {
       top: 18.43%;
-      right: 26.04%;
+      right: 20.04%;
+      animation: animationFramesTwo 15s infinite alternate linear;
     }
     
     &:nth-child(7) {
@@ -57,25 +66,230 @@
     &:nth-child(8) {
       top: 45.86%;
       right: 5.52%;
+      animation: animationFramesOne 22s infinite alternate linear;
     }
     
     &:nth-child(9) {
       bottom: 27.54%;
       right: 13.33%;
+      animation: move 5s infinite linear;
     }
     
     &:nth-child(10) {
       bottom: 8.06%;
-      right: 16.41%;
+      right: 10.41%;
+      animation: jump 8s infinite linear;
     }
   }
 
-  @keyframes move {
-    0% {
-      transform: translateX(0);
-    }
-    100% {
-      transform: translateX(-100%);
-    }
+}
+
+
+
+@keyframes move {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes jump {
+  0%   {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
+  40%  {-webkit-transform: translate3d(0,50%,0);transform: translate3d(0,50%,0);}
+  100% {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
+}
+
+@keyframes rotated {
+  0%   {-webkit-transform: rotate(0);transform: rotate(0);}
+  100% {-webkit-transform: rotate(360deg);transform: rotate(360deg);}
+}
+
+@keyframes rotatedHalf {
+  0%   {-webkit-transform: rotate(0);transform: rotate(0);}
+  50% {-webkit-transform: rotate(90deg);transform: rotate(90deg);}
+  100%   {-webkit-transform: rotate(0);transform: rotate(0);}
+}
+
+@keyframes rotatedHalfTwo {
+  0% {-webkit-transform: rotate(-90deg);transform: rotate(-90deg);}
+  100%   {-webkit-transform: rotate(90deg);transform: rotate(90deg);}
+}
+
+@keyframes scale-upOne {
+  0%   {-webkit-transform: scale(1);transform: scale(1);}
+  100% {-webkit-transform: scale(0.2);transform: scale(0.2);}
+}
+
+@keyframes scale-right {
+  0%  {-webkit-transform: translateX(-50%);transform: translateX(-50%);}
+  50% {-webkit-transform: translateX(50%);transform: translateX(50%);}
+  100% {-webkit-transform: translateX(-50%);transform: translateX(-50%);}
+}
+
+@keyframes fade-in {
+  0%   {opacity: 0.7;}
+  40%  {opacity: 1;}
+  100% {opacity: 0.7;}
+}
+
+
+@keyframes hvr-ripple-out {
+  0% {
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    opacity: 1;
+  }
+  100% {
+    top: -6px;
+    right: -6px;
+    bottom: -6px;
+    left: -6px;
+    opacity: 0;
+  }
+}
+@keyframes hvr-ripple-out-two {
+  0% {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 1;
+  }
+  100% {
+    top: -12px;
+    right: -12px;
+    bottom: -12px;
+    left: -12px;
+    opacity: 0;
+  }
+}
+
+@keyframes scale-up-one {
+  0%   {-webkit-transform: scale(1);transform: scale(1);}
+  40%  {-webkit-transform: scale(0.5);transform: scale(0.5);}
+  100% {-webkit-transform: scale(1);transform: scale(1);}
+}
+@keyframes scale-up-two {
+  0%   {-webkit-transform: scale(0.5);transform: scale(0.5);}
+  40%  {-webkit-transform: scale(0.8);transform: scale(0.8);}
+  100% {-webkit-transform: scale(0.5);transform: scale(0.5);}
+}
+@keyframes scale-up-three {
+  0%   {-webkit-transform: scale(0.7);transform: scale(0.7);}
+  40%  {-webkit-transform: scale(0.4);transform: scale(0.4);}
+  100% {-webkit-transform: scale(0.7);transform: scale(0.7);}
+}
+
+
+@keyframes animationFramesOne{
+  0% {
+    transform:  translate(0px,0px)  rotate(0deg) ;
+  }
+  20% {
+    transform:  translate(73px,-1px)  rotate(36deg) ;
+  }
+  40% {
+    transform:  translate(141px,72px)  rotate(72deg) ;
+  }
+  60% {
+    transform:  translate(83px,122px)  rotate(108deg) ;
+  }
+  80% {
+    transform:  translate(-40px,72px)  rotate(144deg) ;
+  }
+  100% {
+    transform:  translate(0px,0px)  rotate(0deg) ;
+  }
+}
+
+
+@keyframes animationFramesTwo{
+  0% {
+    transform:  translate(0px,0px)  rotate(0deg) scale(1) ;
+  }
+  20% {
+    transform:  translate(73px,-1px)  rotate(36deg) scale(0.9);
+  }
+  40% {
+    transform:  translate(141px,72px)  rotate(72deg) scale(1);
+  }
+  60% {
+    transform:  translate(83px,122px)  rotate(108deg) scale(1.2);
+  }
+  80% {
+    transform:  translate(-40px,72px)  rotate(144deg) scale(1.1);
+  }
+  100% {
+    transform:  translate(0px,0px)  rotate(0deg) scale(1);
+  }
+}
+
+
+@keyframes animationFramesThree{
+  0% {
+    transform:  translate(165px,-179px)  ;
+  }
+  100% {
+    transform:  translate(-346px,617px)  ;
+  }
+}
+
+
+
+@keyframes animationFramesFour{
+  0% {
+    transform:  translate(-300px,151px)  rotate(0deg) ;
+  }
+  100% {
+    transform:  translate(251px,-200px)  rotate(180deg) ;
+  }
+}
+
+
+@keyframes animationFramesFive{
+  0% {
+    transform:  translate(61px,-99px)  rotate(0deg) ;
+  }
+  21% {
+    transform:  translate(4px,-190px)  rotate(38deg) ;
+  }
+  41% {
+    transform:  translate(-139px,-200px)  rotate(74deg) ;
+  }
+  60% {
+    transform:  translate(-263px,-164px)  rotate(108deg) ;
+  }
+  80% {
+    transform:  translate(-195px,-49px)  rotate(144deg) ;
+  }
+  100% {
+    transform:  translate(-1px,0px)  rotate(180deg) ;
+  }
+}
+
+@keyframes gradientBG {
+  0% {
+      background-position: 0 0;
+  }
+  50% {
+      background-position: 300% 0;
+  }
+  100% {
+      background-position: 0 0;
+  }
+}
+@keyframes imageBgAnim {
+  0% {
+      background-position: 0 0;
+  }
+  50% {
+      background-position: 120% 0;
+  }
+  100% {
+      background-position: 0 0;
   }
 }
